WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
122916
JIT::restoreArgumentReferenceForTrampoline is not used anymore.
https://bugs.webkit.org/show_bug.cgi?id=122916
Summary
JIT::restoreArgumentReferenceForTrampoline is not used anymore.
Julien Brianceau
Reported
2013-10-16 13:55:11 PDT
Architecture specific function JIT::restoreArgumentReferenceForTrampoline is not used anymore, so we can get rid of it.
Attachments
Remove unused JIT::restoreArgumentReferenceForTrampoline function
(2.13 KB, patch)
2013-10-16 13:56 PDT
,
Julien Brianceau
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Julien Brianceau
Comment 1
2013-10-16 13:56:37 PDT
Created
attachment 214390
[details]
Remove unused JIT::restoreArgumentReferenceForTrampoline function
WebKit Commit Bot
Comment 2
2013-10-16 14:36:15 PDT
Comment on
attachment 214390
[details]
Remove unused JIT::restoreArgumentReferenceForTrampoline function Clearing flags on attachment: 214390 Committed
r157530
: <
http://trac.webkit.org/changeset/157530
>
WebKit Commit Bot
Comment 3
2013-10-16 14:36:17 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug