Remove unused JIT::restoreArgumentReferenceForTrampoline function. https://bugs.webkit.org/show_bug.cgi?id=122916.

Patch by Julien Brianceau <jbriance@cisco.com> on 2013-10-16
Reviewed by Michael Saboff.

This architecture specific function is not used anymore, so get rid of it.

* jit/JIT.h:
* jit/JITInlines.h:

Canonical link: https://commits.webkit.org/140992@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157530 268f45cc-cd09-0410-ab3c-d52691b4dbfc